// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components > Form.jsx Comprobamos que se renderiza bien nuestro componente Form 1`] = `
<form
  className="formBeer"
  encType="multipart/form-data"
  method="POST"
  onSubmit={[Function]}
>
  <h2>
    Introduzca valores para la creación:
  </h2>
  <div
    className="formBorder"
  >
    <div
      className="panel panel-default"
    >
      <FormErrors
        formErrors={
          Object {
            "grad": "",
            "imagen": "",
            "ingr": "",
            "nombre": "",
            "precio": "",
            "tipo": "",
          }
        }
      />
    </div>
    <div
      className="form-group"
      id="img"
    >
      <label
        htmlFor="imagen"
      >
        Imagen:
      </label>
      <input
        className="form-control-file"
        id="img_in"
        name="imagen"
        onChange={[Function]}
        required={true}
        type="file"
        value=""
      />
      <img
        alt="imagen seleccionada mediante cuadro de diálogo"
        id="imgSelected"
        name="imgSelected"
        src="#"
      />
      <br />
    </div>
    <div
      className="form-row"
    >
      <div
        className="form-group col-md-4 "
        id="nom"
      >
        <label
          htmlFor="nombre"
        >
          Nombre:
        </label>
        <input
          className="form-control"
          name="nombre"
          onChange={[Function]}
          required={true}
          type="text"
          value=""
        />
        <br />
      </div>
      <div
        className="form-group col-md-2 "
        id="grad"
      >
        <label
          htmlFor="grad"
        >
          Graduación:
        </label>
        <input
          className="form-control"
          name="grad"
          onChange={[Function]}
          required={true}
          size="3"
          type="text"
          value=""
        />
        <br />
      </div>
    </div>
    <div
      className="form-group"
      id="sel"
    >
      <label
        htmlFor="sele"
      >
        Selección
      </label>
      <select
        id="tipo"
        name="tipo"
        onChange={[Function]}
        required={true}
      >
        <option
          value="0"
        >
          Seleccione Un tipo
        </option>
        <option
          value="1"
        >
          Ale
        </option>
        <option
          value="2"
        >
          De trigo
        </option>
        <option
          value="3"
        >
          IPA
        </option>
        <option
          value="4"
        >
          Lager
        </option>
        <option
          value="5"
        >
          Lambic
        </option>
        <option
          value="6"
        >
          Pilsen
        </option>
        <option
          value="7"
        >
          Porter
        </option>
        <option
          value="8"
        >
          Stout
        </option>
      </select>
      <br />
    </div>
    <div
      className="form-group "
      id="ingr"
    >
      <label
        htmlFor="ingr"
      >
        Ingredientes:
      </label>
      <br />
      <textarea
        cols="80"
        name="ingr"
        onChange={[Function]}
        rows="4"
        value=""
      />
      <br />
    </div>
    <div
      className="form-group"
      id="check"
    >
      <label>
        <input
          id="chk"
          name="chk"
          onChange={[Function]}
          type="checkbox"
          value="Sin Gluten"
        />
        Sin gluten
      </label>
      <br />
    </div>
    <div
      className="form-group "
      id="pre"
    >
      <label
        htmlFor="precio"
      >
        Precio:
      </label>
      <br />
      <input
        name="precio"
        onChange={[Function]}
        required={true}
        type="text"
        value=""
      />
      <br />
    </div>
    <div
      className="form-group"
    >
      <button
        align="center"
        className="btn btn-primary"
        disabled={true}
        type="submit"
      >
        Añadir
      </button>
    </div>
  </div>
</form>
`;

exports[`components > Home.page.jsx Comprobamos que se renderiza bien nuestro componente Home 1`] = `
<div
  className="cuerpo"
/>
`;

exports[`components > Listado.jsx Comprobamos que se renderiza bien nuestro componente Listado 1`] = `
<div
  className="listadoContainer"
>
  <div>
    <div
      className="tablaListado titulosTabla"
    >
      <div
        className="elementoLista"
      >
        ID
      </div>
      <div
        className="elementoLista"
      >
        Imagen
      </div>
      <div
        className="elementoLista"
      >
        <Link
          replace={false}
          to="/listado/porNombre/"
        >
          Nombre
        </Link>
      </div>
      <div
        className="elementoLista"
      >
        <Link
          replace={false}
          to="/listado/porGraduacion/"
        >
          Grad
        </Link>
      </div>
      <div
        className="elementoLista"
      >
        <Link
          replace={false}
          to="/listado/porTipo/"
        >
          Tipo
        </Link>
      </div>
      <div
        className="elementoLista"
      >
        Ingredientes
      </div>
      <div
        className="elementoLista"
      >
        Sin Gluten
      </div>
      <div
        className="elementoLista"
      >
        Precio
      </div>
    </div>
  </div>
</div>
`;

exports[`components > PorGraduacion Comprobamos que se renderiza correctamente nuestro componente PorGraduacion 1`] = `
<div
  className="listadoContainer"
>
  <div>
    <div
      className="tablaListado titulosTabla"
    >
      <div
        className="elementoLista"
      >
        ID
      </div>
      <div
        className="elementoLista"
      >
        Imagen
      </div>
      <div
        className="elementoLista"
      >
        <Link
          replace={false}
          to="/listado/porNombre"
        >
          Nombre
        </Link>
      </div>
      <div
        className="elementoLista"
      >
        <Link
          replace={false}
          to="/listado/porGraduacion"
        >
          Grad
        </Link>
      </div>
      <div
        className="elementoLista"
      >
        <Link
          replace={false}
          to="/listado/porTipo/"
        >
          Tipo
        </Link>
      </div>
      <div
        className="elementoLista"
      >
        Ingredientes
      </div>
      <div
        className="elementoLista"
      >
        Sin Gluten
      </div>
      <div
        className="elementoLista"
      >
        Precio
      </div>
    </div>
  </div>
</div>
`;

exports[`components > PorNombre.jsx Comprobamos que se renderiza correctamente nuestro componente PorNombre 1`] = `
<div
  className="listadoContainer"
>
  <div>
    <div
      className="tablaListado titulosTabla"
    >
      <div
        className="elementoLista"
      >
        ID
      </div>
      <div
        className="elementoLista"
      >
        Imagen
      </div>
      <div
        className="elementoLista"
      >
        <Link
          replace={false}
          to="/listado/porNombre/"
        >
          Nombre
        </Link>
      </div>
      <div
        className="elementoLista"
      >
        <Link
          replace={false}
          to="/listado/porGraduacion/"
        >
          Grad
        </Link>
      </div>
      <div
        className="elementoLista"
      >
        <Link
          replace={false}
          to="/listado/porTipo/"
        >
          Tipo
        </Link>
      </div>
      <div
        className="elementoLista"
      >
        Ingredientes
      </div>
      <div
        className="elementoLista"
      >
        Sin Gluten
      </div>
      <div
        className="elementoLista"
      >
        Precio
      </div>
    </div>
  </div>
</div>
`;

exports[`components > PorTipo Comprobamos que se renderiza correctamente nuestro componente PorTipo 1`] = `
<div
  className="listadoContainer"
>
  <div>
    <div
      className="tablaListado titulosTabla"
    >
      <div
        className="elementoLista"
      >
        ID
      </div>
      <div
        className="elementoLista"
      >
        Imagen
      </div>
      <div
        className="elementoLista"
      >
        <Link
          replace={false}
          to="/listado/porNombre/"
        >
          Nombre
        </Link>
      </div>
      <div
        className="elementoLista"
      >
        <Link
          replace={false}
          to="/listado/porGraduacion/"
        >
          Grad
        </Link>
      </div>
      <div
        className="elementoLista"
      >
        <Link
          replace={false}
          to="/listado/porTipo/"
        >
          Tipo
        </Link>
      </div>
      <div
        className="elementoLista"
      >
        Ingredientes
      </div>
      <div
        className="elementoLista"
      >
        Sin Gluten
      </div>
      <div
        className="elementoLista"
      >
        Precio
      </div>
    </div>
  </div>
</div>
`;
